network-restriction-policies/02-deny-all-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: k8s-demo
spec:
  podSelector: {}
  egress: []
  policyTypes:
  - Egress
